<resources>
    <string name="app_name">Happy Places</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alex Uioreanu</string>
    <string name="nav_header_subtitle">alexandru.uioreanu@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contact</string>
    <string name="splash_happy_places">Happy Places</string>
    <string name="tripName">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="tripType">Trip Type</string>
    <string name="tripPrice">Trip price</string>
    <string name="tripRating">rating</string>
    <string name="favorite_button">Favorites</string>
    <string name="edit_name">Place Name</string>
    <string name="edit_destination">Destination</string>
    <string name="edit_note">Write what you want to remember about this place :D</string>
    <string name="edit_date">Date</string>
    <string name="edit_date_sample">12-02-2999</string>
    <string name="bt_fav_true">Added to favorite</string>
    <string name="share_text">Hey! You should check this app called Happy Places, it\'s awesome!</string>
    <string name="contact_email">mailto:alexandru.uioreanu@gmail.com</string>
    <string name="contact_twitter">https://twitter.com/uioreanu</string>
    <string name="contact_linkedin">https://www.linkedin.com/in/alex-uioreanu-484472145/</string>
    <string name="contact_github">https://github.com/AlexUioreanu</string>


    <string-array name="activityType">
        <item>Party</item>
        <item>Hiking</item>
        <item>Sky</item>
        <item>City Break</item>
    </string-array>

    <string-array name="placeType">
        <item>Forrest</item>
        <item>Sea Side</item>
        <item>Mountains</item>
        <item>City</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="app_logo">App Logo</string>
    <string name="what_is_this_exactly">Welcome to the diary of your journey!</string>
    <string name="app_description">This app helps you have which you have the whole world in your hands you\'ve made throughout your entire life!\n- Here you can leave your memory\n- Add information about the allocated budget and the chosen destination but also about the purpose of the trip and the photos.</string>
    <string name="app_description_footer">This app was made as a project app for Google\'s Digital Workshop about Android Fundamentals!</string>
    <string name="contact_me">Contact me!</string>
    <string name="contact_description">Got questions? You can send me an email, or contact me on LinkedIn or Twitter!\n\nMake sure to visit my GitHub repository for the source code of this amazing app.</string>
    <string name="email_icon">Emai Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="linkedin_logo">Linkedin Icon</string>
    <string name="github_logo">Github Icon</string>
</resources>