<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:padding="0dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_layout"
        android:layout_width="395dp"
        android:layout_height="180dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:longClickable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">


            <!--                android:tex="@drawable/ic_baseline_landscape_24" />-->

            <TextView
                android:id="@+id/item_placeName"
                android:layout_width="172dp"
                android:layout_height="33dp"
                android:layout_marginStart="8dp"
                android:text="@string/tripName"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="16sp"
                android:paddingStart="3dp"
                app:layout_constraintStart_toEndOf="@+id/tripImage"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/tripImage"
                android:layout_width="152dp"
                android:layout_height="152dp"
                app:cardCornerRadius="@dimen/big"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/item_destination"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:text="@string/destination"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:drawableLeftCompat="@drawable/ic_outline_location_on_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tripImage"
                app:layout_constraintTop_toBottomOf="@+id/item_placeName" />

            <TextView
                android:id="@+id/item_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:drawablePadding="4dp"
                android:text="@string/tripType"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:drawableLeftCompat="@drawable/ic_outline_category_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tripImage"
                app:layout_constraintTop_toBottomOf="@+id/item_destination" />

<!--            <LinearLayout-->
<!--                android:id="@+id/linearLayout"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="-90dp"-->
<!--                android:layout_marginBottom="-10dp"-->
<!--                android:orientation="horizontal"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toEndOf="@+id/tripImage"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/item_type">-->


<!--                <TextView-->
<!--                    android:id="@+id/item_price"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:text="@string/tripPrice"-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->


<!--                <TextView-->
<!--                    android:layout_width="25dp"-->
<!--                    android:layout_height="wrap_content" />-->

<!--                <TextView-->
<!--                    android:id="@+id/ "-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/tripRating"-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->
<!--            </LinearLayout>-->

            <ImageButton
                android:id="@+id/edit_bt_favorite"
                android:layout_width="44dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/favorite_button"
                android:focusable="true"
                android:src="@drawable/ic_whatshot_light"
                app:layout_constraintBottom_toTopOf="@+id/item_destination"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_placeName"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/item_mood"
                android:layout_width="70dp"
                android:layout_height="58dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tripImage"
                app:layout_constraintTop_toBottomOf="@+id/item_type"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>